--- a/index.html
+++ b/index.html
@@ -30,18 +30,21 @@
             <div class="project-card">
                 <img src="images/firstOne.png" alt="first-project-image">
                 <h3>Course Selling</h3>
-                <p><a href="https://dominic20-03.github.io/Course-selling-front-end-design/">Click here to see the
+                <p><a target="_blank" href="https://dominic20-03.github.io/Course-selling-front-end-design/">Click here
+                        to see the
                         project</a></p>
             </div>
             <div class="project-card">
                 <img src="images/secondOne.png" alt="second-project-image">
                 <h3>Tour Planning</h3>
-                <p><a href="https://dominic20-03.github.io/first-frontend-design/">Click here to see the project</a></p>
+                <p><a target="_blank" href="https://dominic20-03.github.io/first-frontend-design/">Click here to see the
+                        project</a></p>
             </div>
             <div class="project-card">
                 <img src="images/thirdOne.png" alt="third-project-image">
                 <h3>Movie Watch</h3>
-                <p><a href="https://dominic20-03.github.io/Task-01/">Click here to see the project</a></p>
+                <p><a target="_blank" href="https://dominic20-03.github.io/Task-01/">Click here to see the project</a>
+                </p>
             </div>
         </div>
     </section>
