updated both html and css code

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     Vjudge,
                     CSES,
                     HackerRank etc.</i></span>
+            <br>I am also proficient in Object-Oriented Programming (OOP) using C++ and Java, with a solid understanding
+            of
+            core OOP principles such as encapsulation, inheritance, polymorphism, and abstraction.
         </h3>
     </section>
 
