--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                     Vjudge,
                     CSES,
                     HackerRank etc.</i></span>
-            <br>I am also proficient in Object-Oriented Programming (OOP) using C++ and Java, with a solid understanding
+            <br>I am also proficient in Object-Oriented Programming (OOP) using <b>C++</b> and <b>Java</b>, with a solid
+            understanding
             of
             core OOP principles such as encapsulation, inheritance, polymorphism, and abstraction.
         </h3>
